added ejs template design / made header footer

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+<%- include("header") -%> 
     <h1> <%= eday %>   </h1>
  <div class="mainListDiv">
      <div class="list">
@@ -23,5 +15,4 @@
         </form>
     </div>
 </div>
-</body>
-</html>
+<%- include("footer") -%> 
