--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,12 @@
 *{
     font-family: 'Montserrat', sans-serif;
 }
-
+footer {
+    color: white;
+    color: rgba(0, 0, 0, 0.5);
+    text-align: center;
+  }
+  
 h1{
     display: table;
     text-align: center;
