--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,3 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="header_main">
+        <form action="/" method="GET" class="headerform">
+            <button class="header_heading"> To-do List </button>
+        </form>
+        <form action="/work" method="GET" class="headerform">
+        <button class="worklist"> WorkList </button>
+    </form>
+    </div>
